tdf#106252 Engineering notation for Precision as shown

with more tests

Reviewed-on: https://gerrit.libreoffice.org/35089
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 5f2db66ad0de6fbbae309850516e17eaa17934cb)

Change-Id: Ifc77b847af4eaaa3c85e904e46c2663b6d768241
Reviewed-on: https://gerrit.libreoffice.org/36369
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>